# TennisPopa

./: .gitignore  index.html  package-lock.json  package.json  todo.md  tsconfig.json
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/databases/: forms.sql  players.db  players.sql
src-tauri/excel_files/: latest.xlsx
src-tauri/resources/databases/: courts.db  courts.sql  forms.db  players.db  players.sql
src-tauri/src/: availability.rs  excel.rs.backup  lib.rs  main.rs  player.rs  round.rs.backup
src-tauri/src/forms/: create_forms.rs  forms_info.rs  get_forms_responses.rs  mod.rs
src-tauri/src/groups/: courts.rs  group.rs  group_excel.rs  group_match.rs  group_scheduler.rs  mod.rs
src-tauri/src/players/: availability.rs  category.rs  group.rs  match_excel.rs  mod.rs  player.rs  player_excel.rs  size.rs  unscheduled_matches_excel.rs
src/components/: group.vue
src/pages/: FormPage.vue  GetFormResponsesPage.vue  Giron.vue  Groups.vue  Matches.vue  Player.vue  Schedule.vue  SearchPlayer.vue
src/router/: index.js
