[package]
name = "tennispopatauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tennispopatauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
uuid = { version = "1.4", features = ["v4"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitflags = {version = "2.9.0", features = ["serde"] }
petgraph = "0.8.1"
rand = "0.9.0"
csv = "1.3"
tokio = { version = "1", features = ["full"] }
yup-oauth2 = "7.0.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = "0.4.41"
rust_xlsxwriter = "0.90.0"
rusqlite-struct = "0.1.1"
rusqlite-struct-derive = "0.1.1"
rusqlite = {version = "0.37.0", features = ["bundled", "chrono", "serde_json", "uuid"] }
lazy_static = "1.5.0"
serde_repr = "0.1.20"
strsim = "0.11.1"
serde_rusqlite = "0.40.1"
tauri-plugin-dialog = "2"
glob = "0.3"
once_cell = "1.21.3"
